minor collapsed style fix

--- a/src/app/modules/templates/template-list/template-list.component.scss
+++ b/src/app/modules/templates/template-list/template-list.component.scss
@@ -638,7 +638,7 @@
   }
 
   .stage-option-collapsed {
-    position: absolute;
+    position: relative;
     right: 0;
     margin-top: 1.5rem;
   }
@@ -1305,7 +1305,7 @@
   }
 
   .stage-option-collapsed {
-    position: absolute;
+    position: relative;
     right: 0;
     margin-top: 1.5rem;
   }
@@ -1973,7 +1973,7 @@
   }
 
   .stage-option-collapsed {
-    position: absolute;
+    position: relative;
     right: 0;
     margin-top: 1.5rem;
   }
