--- a/src/app/modules/workflows/wave-list/wave-list.component.scss
+++ b/src/app/modules/workflows/wave-list/wave-list.component.scss
@@ -638,7 +638,7 @@
   }
 
   .stage-option-collapsed {
-    position: absolute;
+    position: relative;
     right: 0;
     margin-top: 1.5rem;
   }
@@ -1299,7 +1299,7 @@
   }
 
   .stage-option-collapsed {
-    position: absolute;
+    position: relative;
     right: 0;
     margin-top: 1.5rem;
   }
@@ -1961,7 +1961,7 @@
   }
 
   .stage-option-collapsed {
-    position: absolute;
+    position: relative;
     right: 0;
     margin-top: 1.5rem;
   }
